review first 10 pages of unified document

--- a/config.tex
+++ b/config.tex
@@ -9,7 +9,7 @@
 \iffalse %% Uncomment for the TS
 \newcommand{\doctitle}{\Cpp Extensions for Numerics}
 \else
-\newcommand{\doctitle}{\Cpp Numerics Work In Progress}
+\newcommand{\doctitle}{\Cpp Numerics Work In Progress Issues}
 \fi
 
 %% Release date
