--- a/machinelayer.tex
+++ b/machinelayer.tex
@@ -4,19 +4,40 @@
 
 The machine abstraction layer enables a mostly machine-independent implementation of this specification.
 
+\begin{modifcommentblock}
+Synopsys is missing.
+
+In what header the following functions are defained?
+\end{modifcommentblock}
+
 \rSec1[overflow_detecting_ops]{Overflow-Detecting Operations}
 
 The overflow-detecting functions return a boolean true when the operation overflows, and a boolean false when the operation does not overflow. Compilers may assume that a true result is rare. When the return is false, the function writes the operation result through the given pointer. When the return is true, the pointer is not used and no write occurs.
 
 The following functions are available. Within these prototypes \tcode{T} and \tcode{C} are any integer type. However, \tcode{C} is useful only when it does not have values that \tcode{T} has.
 
+\begin{modifcommentblock}
+For the above paragraph:
+\begin{itemize}
+  \item \tcode{T} and \tcode{C} are too short names. They should be \tcode{Integer}, \tcode{Integer1}, \tcode{Integer2}.
+  \item Should those functions be more generic and work with \tcode{wide_integer} and \tcode{integer}? If not, then we can use the concept \tcode{Integral} instead.
+\end{itemize}
+\end{modifcommentblock}
+
+\begin{modifcommentblock}
+Functions below could be used as a basic building block for \tcode{wide_integer}, however they miss a few important things:
+\begin{itemize}
+  \item \tcode{constexpr} - almost all the operations on \tcode{wide_integer} are \tcode{constexpr}. Without \tcode{constexpr} the below functions are not usable with \tcode{wide_integer}.
+  \item \tcode{noexcept} - changing the pointer argument to a reference makes it impossible to pass a \tcode{nullptr} and to get an UB. This is quite helpfull for users and makes the below functions suit better the \tcode{wide_integer} needs.
+\end{itemize}
+\end{modifcommentblock}
+
 \begin{codeblock}
-bool overflow_cvt( C* result, T value );
-bool overflow_neg( T* result, T value );
-bool overflow_lsh( T* product, T multiplicand, int count );
-bool overflow_add( T* summand, T augend, T addend );
-bool overflow_sub( T* difference, T minuend, T subtrahend );
-bool overflow_mul( T* product, T multiplicand, T multiplier );
+@\addmodif{\tcode{constexpr }}@bool overflow_neg(T@\tcode{\remmodif{*}\addmodif{\&}}@ result, T value)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@bool overflow_lsh(T@\tcode{\remmodif{*}\addmodif{\&}}@ product, T multiplicand, int count)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@bool overflow_add(T@\tcode{\remmodif{*}\addmodif{\&}}@ summand, T augend, T addend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@bool overflow_sub(T@\tcode{\remmodif{*}\addmodif{\&}}@ difference, T minuend, T subtrahend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@bool overflow_mul(T@\tcode{\remmodif{*}\addmodif{\&}}@ product, T multiplicand, T multiplier)@\addmodif{\tcode{ noexcept}}@;
 \end{codeblock}
 
 \rSec1[overflow_handling_ops]{Overflow-Handling Operations}
@@ -40,59 +61,59 @@ Within the definition of the following functions, we use a defining function, wh
 Many C++ conversions already reduce the range of a value, but they do not provide programmer control of that reduction. We can give programmers control.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(overflow mode, U value)		
+template<typename T, typename U> @\addmodif{\tcode{constexpr }}@T convert(overflow mode, U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, numeric_limits<T>::min, numeric_limits<T>::max, value)}.	
+\returns \tcode{overflow(mode, numeric_limits<T>::min\addmodif{()}, numeric_limits<T>::max\addmodif{()}, value)}.	
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T, typename U> T convert(U value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T, typename U> @\addmodif{\tcode{constexpr }}@T convert(U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{convert(mode, value)}.	
+\returns \tcode{convert(\tcode{\remmodif{m}\addmodif{M}}ode, value)}.	
 \end{itemdescr}
 
 Being able to specify overflow from a range of values of the same type is also helpful.
 
 \begin{itemdecl}
-template<typename T> T limit(overflow mode, T lower, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit(overflow mode, T lower, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, lower, upper, value)}.	
+\returns \tcode{overflow(mode, lower, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit(T lower, T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit(T lower, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit(mode, lower, upper, value)}.	
+\returns \tcode{limit(\tcode{\remmodif{m}\addmodif{M}}ode, lower, upper, value)}.
 \end{itemdescr}
 
 Common arguments can be elided with convenience functions.
 
 \begin{itemdecl}
-template<typename T> T limit_nonnegative(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_nonnegative(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit(mode, 0, upper, value)}.	
+\returns \tcode{limit(mode, 0, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_nonnegative(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit_nonnegative(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_nonnegative(mode, upper, value)}.	
+\returns \tcode{limit_nonnegative(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_signed(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_signed(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -100,17 +121,17 @@ template<typename T> T limit_signed(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_signed(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> T limit_signed(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_signed(mode, upper, value)}.	
+\returns \tcode{limit_signed(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.	
 \end{itemdescr}
 
 Two's-complement numbers are a slight variant on the above.
 
 \begin{itemdecl}
-template<typename T> T limit_twoscomp(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_twoscomp(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -118,17 +139,17 @@ template<typename T> T limit_twoscomp(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_twoscomp(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit_twoscomp(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_twoscomp(mode, upper, value)}.	
+\returns \tcode{limit_twoscomp(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.	
 \end{itemdescr}
 
 For binary representations, we can also specify bits instead. While this specification may seem redundant, it enables faster implementations.
 
 \begin{itemdecl}
-template<typename T> T limit_nonnegative_bits(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_nonnegative_bits(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -136,15 +157,15 @@ template<typename T> T limit_nonnegative_bits(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_nonnegative_bits(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit_nonnegative_bits(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_nonnegative_bits(mode, upper, value)}.	
+\returns \tcode{limit_nonnegative_bits(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.	
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_signed_bits(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_signed_bits(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -152,15 +173,15 @@ template<typename T> T limit_signed_bits(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_signed_bits(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit_signed_bits(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_signed_bits(mode, upper, value)}.
+\returns \tcode{limit_signed_bits(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_twoscomp_bits(overflow mode, T upper, T value)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T limit_twoscomp_bits(overflow mode, T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -168,29 +189,29 @@ template<typename T> T limit_twoscomp_bits(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_twoscomp_bits(T upper, T value)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T limit_twoscomp_bits(T upper, T value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_twoscomp_bits(mode, upper, value)}.	
+\returns \tcode{limit_twoscomp_bits(\tcode{\remmodif{m}\addmodif{M}}ode, upper, value)}.	
 \end{itemdescr}
 
 Embedding overflow detection within regular operations can lead to enhanced performance. In particular, left shift is a important candidate operation within fixed-point arithmetic.
 
 \begin{itemdecl}
-template<typename T> T scale_up(overflow mode, T value, int count)		
+template<typename T> @\addmodif{\tcode{constexpr }}@T scale_up(overflow mode, T value, int count)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, numeric_limits<T>::min, numeric_limits<T>::max, value*$2^{count}$)}.	
+\returns \tcode{overflow(mode, numeric_limits<T>::min\addmodif{()}, numeric_limits<T>::max\addmodif{()}, value*$2^{count}$)}.	
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T scale_up(T value, int count)		
+template<overflow @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> @\addmodif{\tcode{constexpr }}@T scale_up(T value, int count)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale_up(mode, value, count)}.	
+\returns \tcode{scale_up(\tcode{\remmodif{m}\addmodif{M}}ode, value, count)}.	
 \end{itemdescr}
 
 \rSec1[round_ops]{Rounding Operations}
@@ -199,16 +220,16 @@ We represent the rounding mode in C++ as an enumeration:
 
 \begin{codeblock}
 enum class rounding {
-	all_to_neg_inf, all_to_pos_inf,
-	all_to_zero, all_away_zero,
-	all_to_even, all_to_odd,
-	all_fastest, all_smallest,
-	all_unspecified,
-	tie_to_neg_inf, tie_to_pos_inf,
-	tie_to_zero, tie_away_zero,
-	tie_to_even, tie_to_odd,
-	tie_fastest, tie_smallest,
-	tie_unspecified
+  all_to_neg_inf, all_to_pos_inf,
+  all_to_zero, all_away_zero,
+  all_to_even, all_to_odd,
+  all_fastest, all_smallest,
+  all_unspecified,
+  tie_to_neg_inf, tie_to_pos_inf,
+  tie_to_zero, tie_away_zero,
+  tie_to_even, tie_to_odd,
+  tie_fastest, tie_smallest,
+  tie_unspecified
 };
 \end{codeblock}
 
@@ -224,7 +245,7 @@ Within the definition of the following functions, we use a defining function, wh
 We already have rounding functions for converting floating-point numbers to integers. However, we need a facility that extends to different sizes of floating-point and between other numeric types.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(rounding mode, U value)		
+template<typename T, typename U> T convert(rounding mode, U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -232,17 +253,17 @@ template<typename T, typename U> T convert(rounding mode, U value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T, typename U> T convert(U value)		
+template<rounding @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T, typename U> T convert(U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{round<T>(mode, U)}.	
+\returns \tcode{round<T>(\tcode{\remmodif{m}\addmodif{M}}ode, U)}.	
 \end{itemdescr}
 
 A division function has obvious utility.
 
 \begin{itemdecl}
-template<typename T> T divide(rounding mode, T dividend, T divisor)		
+template<typename T> T divide(rounding mode, T dividend, T divisor)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -250,17 +271,17 @@ template<typename T> T divide(rounding mode, T dividend, T divisor)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T> T divide(T dividend, T divisor)		
+template<rounding @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> T divide(T dividend, T divisor)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{divide(mode, dividend, divisor)}.	
+\returns \tcode{divide(\tcode{\remmodif{m}\addmodif{M}}ode, dividend, divisor)}.	
 \end{itemdescr}
 
 Division by a power of two has substantial implementation efficiencies, and is used heavily in fixed-point arithmetic as a scaling mechanism. We represent the conjunction of these approaches with a rounding scale down (right shift).
 
 \begin{itemdecl}
-template<typename T> T scale_down(rounding mode, T value, int bits)		
+template<typename T> T scale_down(rounding mode, T value, int bits)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -268,11 +289,11 @@ template<typename T> T scale_down(rounding mode, T value, int bits)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T> T scale_down(T value, int bits)		
+template<rounding @\tcode{\remmodif{m}\addmodif{M}}@ode, typename T> T scale_down(T value, int bits)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale_down(mode, dividend, bits)}.	
+\returns \tcode{scale_down(\tcode{\remmodif{m}\addmodif{M}}ode, dividend, bits)}.	
 \end{itemdescr}
 
 \rSec1[combined_rounding]{Combined Rounding and Overflow Operations}
@@ -282,39 +303,39 @@ Some operations may reasonably both require rounding and require overflow detect
 First and foremost, conversion from floating-point to integer may require handling a floating-point value that has both a finer resolution and a larger range than the integer can handle. The problem generalizes to arbitrary numeric types.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(overflow omode, rounding rmode, U value)		
+template<typename T, typename U> T convert(overflow omode, rounding rmode, U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(omode, numeric_limits<T>::min, numeric_limits<T>::max, round(rmode,value))}.	
+\returns \tcode{overflow(omode, numeric_limits<T>::min\addmodif{()}, numeric_limits<T>::max\addmodif{()}, round(rmode,value))}.	
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow omode, rounding rmode, typename T, typename U> T convert(U value)		
+template<overflow @\tcode{\remmodif{om}\addmodif{OM}}@ode, rounding @\tcode{\remmodif{rm}\addmodif{RM}}@ode, typename T, typename U> T convert(U value)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{convert(omode, rmode; value)}.	
+\returns \tcode{convert(\tcode{\remmodif{om}\addmodif{OM}}ode, \tcode{\remmodif{rm}\addmodif{RM}}ode\tcode{\remmodif{;}\addmodif{,}} value)}.
 \end{itemdescr}
 
 Consider shifting as multiplication by a power of two. It has an analogy in a bidirectional shift, where a positive power is a left shift and a negative power is a right shift.
 
 \begin{itemdecl}
-template<typename T> T scale(overflow omode, rounding rmode, T value, int count)		
+template<typename T> T scale(overflow omode, rounding rmode, T value, int count)@\addmodif{;}@
 \end{itemdecl}
 
 \begin{itemdescr}
 \returns \tcode{count < 0
 	? round(rmode,value*$2^{count}$)
-	: overflow(omode, numeric_limits<T>::min, numeric_limits<T>::max, value*$2^{count}$)}.	
+	: overflow(omode, numeric_limits<T>::min\addmodif{()}, numeric_limits<T>::max\addmodif{()}, value*$2^{count}$)}.	
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow omode, rounding rmode, typename T> T scale(T value, int count)		
+template<overflow @\tcode{\remmodif{om}\addmodif{OM}}@ode, rounding @\tcode{\remmodif{rm}\addmodif{RM}}@ode, typename T> T scale(T value, int count)		
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale(omode, rmode value count)}.	
+\returns \tcode{scale(\tcode{\remmodif{om}\addmodif{OM}}ode, \tcode{\remmodif{rm}\addmodif{RM}}ode\tcode{\addmodif{,}} value\tcode{\addmodif{,}} count)}.	
 \end{itemdescr}
 
 \rSec1[double_word_ops]{Double-Word Operations}
@@ -327,15 +348,13 @@ We expect programmers to use type names from \tcode{<cstdint>} or the parametric
     {Double-word operations}
     {tab:operations}
     \\ \topline
-    \lhdr{name}  &
-    \rhdr{description} \\ \capsep
+    \lhdr{name} & \rhdr{description} \\ \capsep
     \endfirsthead
     \continuedcaption\\
-    \hline
-    \lhdr{name}  &
-    \rhdr{description} \\ \capsep
+    \topline
+    \lhdr{name} & \rhdr{description} \\ \capsep
     \endhead
-    
+
 S & signed integer type
 \\ \rowsep
 
@@ -345,12 +364,19 @@ U & unsigned integer type
 DS & signed integer type that is double the width of the S type
 \\ \rowsep
 
-DU unsigned integer type that is double the width of the U type
-\\ \rowsep
-    
+DU & unsigned integer type that is double the width of the U type
+\\
+
 \end{libreqtab3}  
 
 We need a mechanism to specify the largest supported type for various combinations of function category and operation category. To that end, we propose macros as follows.
+
+\begin{modifcommentblock}
+Macros will stop working with modules. Instead of a macro we have to use aliases.
+
+What names should we have for them and do we need to put them into a separate namespace?
+\end{modifcommentblock}
+
 
 \begin{libreqtab3}
     {Macros}
@@ -395,96 +421,101 @@ LARGEST_SINGLE_WIDE_DIV & single-wide & divn, divw, divnrem, divwrem
 \\ \rowsep
 
 LARGEST_SINGLE_WIDE_ALL & double-wide & the minimum size of the four macros above
-\\ \rowsep 
+\\
     
 \end{libreqtab3} 
 
 We need a mechanism to build and split double-wide types. The lower part of the split is always an unsigned type.
 
 \begin{itemdecl}
-S split_upper( DS value );
-U split_lower( DS value );
-DS wide_build( S upper, U lower );
+@\addmodif{\tcode{constexpr }}@S split_upper(DS value)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@U split_lower(DS value)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DS wide_build(S upper, U lower)@\addmodif{\tcode{ noexcept}}@;
 
-U split_upper( DU value );
-U split_lower( DU value );
-DU wide_build( U upper, U lower );	
+@\addmodif{\tcode{constexpr }}@U split_upper(DU value)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@U split_lower(DU value)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_build(U upper, U lower)@\addmodif{\tcode{ noexcept}}@;
 \end{itemdecl}
 
 The arithmetic functions with an double-wide result are as follows. This category seems less important than the next category.
 
 \begin{itemdecl}
-DS wide_lsh( S multiplicand, int count );
-DS wide_add( S augend, S addend );
-DS wide_sub( S minuend, S subtrahend );
-DS wide_mul( S multiplicand, S multiplier );
-DS wide_add2( S augend, S addend1, S addend2 );
-DS wide_sub2( S minuend, S subtrahend1, S subtrahend2 );
-DS wide_lshadd( S multiplicand, int count, S addend );
-DS wide_lshsub( S multiplicand, int count, S subtrahend );
-DS wide_muladd( S multiplicand, S multiplier, S addend );
-DS wide_mulsub( S multiplicand, S multiplier, S subtrahend );
-DS wide_muladd2( S multiplicand, S multiplier, S addend1, S addend2 );
-DS wide_mulsub2( S multiplicand, S multiplier, S subtrahend1, S subtrahend2 );
-S wide_divn( DS dividend, S divisor );
-DS wide_divw( DS dividend, S divisor );
-S wide_divnrem( S* remainder, DS dividend, S divisor );
-DS wide_divnrem( S* remainder, DS dividend, S divisor );
+@\addmodif{\tcode{constexpr }}@DS wide_lsh(S multiplicand, int count);
+@\addmodif{\tcode{constexpr }}@DS wide_add(S augend, S addend);
+@\addmodif{\tcode{constexpr }}@DS wide_sub(S minuend, S subtrahend);
+@\addmodif{\tcode{constexpr }}@DS wide_mul(S multiplicand, S multiplier);
+@\addmodif{\tcode{constexpr }}@DS wide_add2(S augend, S addend1, S addend2);
+@\addmodif{\tcode{constexpr }}@DS wide_sub2(S minuend, S subtrahend1, S subtrahend2);
+@\addmodif{\tcode{constexpr }}@DS wide_lshadd(S multiplicand, int count, S addend);
+@\addmodif{\tcode{constexpr }}@DS wide_lshsub(S multiplicand, int count, S subtrahend);
+@\addmodif{\tcode{constexpr }}@DS wide_muladd(S multiplicand, S multiplier, S addend);
+@\addmodif{\tcode{constexpr }}@DS wide_mulsub(S multiplicand, S multiplier, S subtrahend);
+@\addmodif{\tcode{constexpr }}@DS wide_muladd2(S multiplicand, S multiplier, S addend1, S addend2);
+@\addmodif{\tcode{constexpr }}@DS wide_mulsub2(S multiplicand, S multiplier, S subtrahend1, S subtrahend2);
+@\addmodif{\tcode{constexpr }}@S wide_divn(DS dividend, S divisor);
+@\addmodif{\tcode{constexpr }}@DS wide_divw(DS dividend, S divisor);
+@\addmodif{\tcode{constexpr }}@S wide_divnrem(S@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, DS dividend, S divisor);
+@\addmodif{\tcode{constexpr }}@DS wide_div@\tcode{\remmodif{n}\addmodif{w}}@rem(S@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, DS dividend, S divisor);
 
-DU wide_lsh( U multiplicand, int count );
-DU wide_add( U augend, U addend );
-DU wide_sub( U minuend, U subtrahend );
-DU wide_mul( U multiplicand, U multiplier );
-DU wide_add2( U augend, U addend1, U addend2 );
-DU wide_sub2( U minuend, U subtrahend1, U subtrahend2 );
-DU wide_lshadd( U multiplicand, int count, U addend );
-DU wide_lshsub( U multiplicand, int count, U subtrahend );
-DU wide_muladd( U multiplicand, U multiplier, U addend );
-DU wide_mulsub( U multiplicand, U multiplier, U subtrahend );
-DU wide_muladd2( U multiplicand, U multiplier, U addend1, U addend2 );
-DU wide_mulsub2( U multiplicand, U multiplier, U subtrahend1, U subtrahend2 );
-U wide_divn( DU dividend, U divisor );
-DU wide_divw( DU dividend, U divisor );
-U wide_divnrem( U* remainder, DU dividend, U divisor );
-DU wide_divnrem( U* remainder, DU dividend, U divisor );		
+@\addmodif{\tcode{constexpr }}@DU wide_lsh(U multiplicand, int count)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_add(U augend, U addend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_sub(U minuend, U subtrahend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_mul(U multiplicand, U multiplier)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_add2(U augend, U addend1, U addend2)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_sub2(U minuend, U subtrahend1, U subtrahend2)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_lshadd(U multiplicand, int count, U addend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_lshsub(U multiplicand, int count, U subtrahend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_muladd(U multiplicand, U multiplier, U addend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_mulsub(U multiplicand, U multiplier, U subtrahend)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_muladd2(U multiplicand, U multiplier, U addend1, U addend2)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@DU wide_mulsub2(U multiplicand, U multiplier, U subtrahend1, U subtrahend2)@\addmodif{\tcode{ noexcept}}@;
+@\addmodif{\tcode{constexpr }}@U wide_divn(DU dividend, U divisor);
+@\addmodif{\tcode{constexpr }}@DU wide_divw(DU dividend, U divisor);
+@\addmodif{\tcode{constexpr }}@U wide_divnrem(U@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, DU dividend, U divisor);
+@\addmodif{\tcode{constexpr }}@DU wide_div@\tcode{\remmodif{n}\addmodif{w}}@rem(U@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, DU dividend, U divisor);
 \end{itemdecl}
 
 The arithmetic functions with a split result are as follows. The lower part of the result is always an unsigned type. The lower part is returned through a pointer while the upper part is returned as the function result. The intent is that in loops, the lower part is written once to memory while the upper part is carried between iterations in a local variable.
 
-\begin{itemdecl}
-S split_lsh( U* product, S multiplicand, int count );
-S split_add( U* summand, S augend, S addend );
-S split_sub( U* difference, S minuend, S subtrahend );
-S split_mul( U* product, S multiplicand, S multiplier );
-S split_add2( U* summand, S value1, S addend1, S addend2 );
-S split_sub2( U* difference, S minuend, S subtrahend1, S subtrahend2 );
-S split_lshadd( U* product, S multiplicand, int count, S addend );
-S split_lshsub( U* product, S multiplicand, int count, S subtrahend );
-S split_muladd( U* product, S multiplicand, S addend1, S addend );
-S split_mulsub( U* product, S multiplicand, S subtrahend1, S subtrahend2 );
-S split_muladd2( U* product, S multiplicand, S multiplier, S addend1, S addend2 );
-S split_mulsub2( U* product, S multiplicand, S multiplier, S subtrahend1, S subtrahend2 );
-S split_divn( S dividend_upper, U dividend_lower, S divisor );
-DS split_divw( S dividend_upper, U dividend_lower, S divisor );
-S split_divnrem( S* remainder, S dividend_upper, U dividend_lower, S divisor );
-DS split_divwrem( S* remainder, S dividend_upper, U dividend_lower, S divisor );
 
-U split_lsh( U* product, U multiplicand, int count );
-U split_add( U* summand, U value1, U addend );
-U split_sub( U* difference, U minuend, U subtrahend );
-U split_mul( U* product, U multiplicand, U multiplier );
-U split_add2( U* summand, U value1, U addend1, U addend2 );
-U split_sub2( U* difference, U minuend, U subtrahend1, U subtrahend2 );
-U split_lshadd( U* product, U multiplicand, int count, U addend );
-U split_lshsub( U* product, U multiplicand, int count, U subtrahend );
-U split_muladd( U* product, U multiplicand, U multiplier, U addend );
-U split_mulsub( U* product, U multiplicand, U multiplier, U subtrahend );
-U split_muladd2( U* product, U multiplicand, U multiplier, U addend1, U addend2 );
-U split_mulsub2( U* product, U multiplicand, U multiplier, U subtrahend1, U subtrahend2 );
-U split_divn( U dividend_upper, U dividend_lower, U divisor );
-DU split_divw( U dividend_upper, U dividend_lower, U divisor );
-U split_divnrem( U* remainder, U dividend_upper, U dividend_lower, U divisor );
-DU split_divwrem( U* remainder, U dividend_upper, U dividend_lower, U divisor );		
+\begin{modifcommentblock}
+Do the below functions have wide or narrow contract? Should they be \tcode{noexcept}?
+\end{modifcommentblock}
+
+\begin{itemdecl}
+@\addmodif{\tcode{constexpr }}@S split_lsh(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, int count);
+@\addmodif{\tcode{constexpr }}@S split_add(U@\tcode{\remmodif{*}\addmodif{\&}}@ summand, S augend, S addend);
+@\addmodif{\tcode{constexpr }}@S split_sub(U@\tcode{\remmodif{*}\addmodif{\&}}@ difference, S minuend, S subtrahend);
+@\addmodif{\tcode{constexpr }}@S split_mul(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, S multiplier);
+@\addmodif{\tcode{constexpr }}@S split_add2(U@\tcode{\remmodif{*}\addmodif{\&}}@ summand, S value1, S addend1, S addend2);
+@\addmodif{\tcode{constexpr }}@S split_sub2(U@\tcode{\remmodif{*}\addmodif{\&}}@ difference, S minuend, S subtrahend1, S subtrahend2);
+@\addmodif{\tcode{constexpr }}@S split_lshadd(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, int count, S addend);
+@\addmodif{\tcode{constexpr }}@S split_lshsub(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, int count, S subtrahend);
+@\addmodif{\tcode{constexpr }}@S split_muladd(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, S addend1, S addend);
+@\addmodif{\tcode{constexpr }}@S split_mulsub(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, S subtrahend1, S subtrahend2);
+@\addmodif{\tcode{constexpr }}@S split_muladd2(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, S multiplier, S addend1, S addend2);
+@\addmodif{\tcode{constexpr }}@S split_mulsub2(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, S multiplicand, S multiplier, S subtrahend1, S subtrahend2);
+@\addmodif{\tcode{constexpr }}@S split_divn( S dividend_upper, U dividend_lower, S divisor);
+@\addmodif{\tcode{constexpr }}@DS split_divw( S dividend_upper, U dividend_lower, S divisor);
+@\addmodif{\tcode{constexpr }}@S split_divnrem( S@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, S dividend_upper, U dividend_lower, S divisor);
+@\addmodif{\tcode{constexpr }}@DS split_divwrem( S@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, S dividend_upper, U dividend_lower, S divisor);
+
+@\addmodif{\tcode{constexpr }}@U split_lsh(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, int count);
+@\addmodif{\tcode{constexpr }}@U split_add(U@\tcode{\remmodif{*}\addmodif{\&}}@ summand, U value1, U addend);
+@\addmodif{\tcode{constexpr }}@U split_sub(U@\tcode{\remmodif{*}\addmodif{\&}}@ difference, U minuend, U subtrahend);
+@\addmodif{\tcode{constexpr }}@U split_mul(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, U multiplier);
+@\addmodif{\tcode{constexpr }}@U split_add2(U@\tcode{\remmodif{*}\addmodif{\&}}@ summand, U value1, U addend1, U addend2);
+@\addmodif{\tcode{constexpr }}@U split_sub2(U@\tcode{\remmodif{*}\addmodif{\&}}@ difference, U minuend, U subtrahend1, U subtrahend2);
+@\addmodif{\tcode{constexpr }}@U split_lshadd(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, int count, U addend);
+@\addmodif{\tcode{constexpr }}@U split_lshsub(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, int count, U subtrahend);
+@\addmodif{\tcode{constexpr }}@U split_muladd(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, U multiplier, U addend);
+@\addmodif{\tcode{constexpr }}@U split_mulsub(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, U multiplier, U subtrahend);
+@\addmodif{\tcode{constexpr }}@U split_muladd2(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, U multiplier, U addend1, U addend2);
+@\addmodif{\tcode{constexpr }}@U split_mulsub2(U@\tcode{\remmodif{*}\addmodif{\&}}@ product, U multiplicand, U multiplier, U subtrahend1, U subtrahend2);
+@\addmodif{\tcode{constexpr }}@U split_divn(U dividend_upper, U dividend_lower, U divisor);
+@\addmodif{\tcode{constexpr }}@DU split_divw(U dividend_upper, U dividend_lower, U divisor);
+@\addmodif{\tcode{constexpr }}@U split_divnrem(U@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, U dividend_upper, U dividend_lower, U divisor);
+@\addmodif{\tcode{constexpr }}@DU split_divwrem(U@\tcode{\remmodif{*}\addmodif{\&}}@ remainder, U dividend_upper, U dividend_lower, U divisor);
 \end{itemdecl}
 
 \rSec0[machine_ext_layer]{Machine extension layer}
@@ -498,7 +529,7 @@ A word is the type provided by \tcode{LARGEST_SINGLE_WIDE_ALL} and defined above
 We provide the following operations. These operations are not intended to provide complete multi-word operations, but rather to handle subarrays with uniform operations. Higher-level operations then compose these operations into a complete operation.
 
 \begin{itemdecl}
-U unsigned_subarray_addin_word U* multiplicand, int length, U addend );		
+@\addmodif{\tcode{constexpr }}@U unsigned_subarray_addin_word@\tcode{\addmodif{(}}@U* multiplicand, int length, U addend);		
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -508,7 +539,7 @@ U unsigned_subarray_addin_word U* multiplicand, int length, U addend );
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_add_word U* summand, const U* augend, int length, U addend );    
+@\addmodif{\tcode{constexpr }}@U unsigned_subarray_add_word@\tcode{\addmodif{(}}@U* summand, const U* augend, int length, U addend);    
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -518,7 +549,7 @@ U unsigned_subarray_add_word U* summand, const U* augend, int length, U addend )
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_mulin_word U* product, int length, U multiplier );    
+@\addmodif{\tcode{constexpr }}@U unsigned_subarray_mulin_word@\tcode{\addmodif{(}}@U* product, int length, U multiplier);    
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -528,17 +559,17 @@ U unsigned_subarray_mulin_word U* product, int length, U multiplier );
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_mul_word U* product, U* multiplicand, int length, U multiplier );    
+@\addmodif{\tcode{constexpr }}@U unsigned_subarray_mul_word@\tcode{\addmodif{(}}@U* product, @\tcode{\addmodif{const }}@U* multiplicand, int length, U multiplier);    
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Multiply the \tcode{multiplicand} of length \tcode{length} by the \tcode{multiplier} writing the result to the \tcode{product}, which is also of length \tcode{length}.
 
-\returns Any carry out from the \tcode{product}.    
+\returns Any carry out from the \tcode{product}.
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_accmul_word U* accumulator, U* multiplicand, int length, U multiplier );    
+@\addmodif{\tcode{constexpr }}@U unsigned_subarray_accmul_word@\tcode{\addmodif{(}}@U* accumulator, @\tcode{\addmodif{const }}@U* multiplicand, int length, U multiplier);    
 \end{itemdecl}
 
 \begin{itemdescr}
