--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@
 \iffalse %% Uncomment for the TS
 The mission of this specification is to make numbers easier to use.
 \else
-The mission of this document is to collect different numbers related proposals in one to make it simpler to discover issues and to simplify editors work of porting the papers to \LaTeX (all the \LaTeX sources are awailable at https://github.com/ZaMaZaN4iK/numeric-papers-in-latex.git ).
+The mission of this document is to highlight inconsistencies among different numbers related proposals, provide a possible solution for them, and update the wordings to be more suitable for the LWG,.
 \fi
 
 \rSec1[intro.style]{Style of presentation}
@@ -17,6 +17,15 @@ Existing wording from the C++ working draft - included to provide context - is p
 Entire clauses / subclauses / paragraphs incorporated from different numbers related proposals are presented in a distinct cyan
 color.
 \end{addedblock}
+
+
+\addmodif{Wording to be added which is original to this document appears in blue.}
+
+\remmodif{Wording which this document strikes is presented in red with strikethrough.}
+
+\begin{modifcommentblock}
+Notes and motivations for change are in brown.
+\end{modifcommentblock}
 
 \rSec1[intro.scope]{Scope}
 
