--- a/ts.tex
+++ b/ts.tex
@@ -117,6 +117,7 @@
 %%\include{references}
 \include{featuretest}
 \include{wideinteger}
+\include{rational}
 \include{aliases}
 \include{unboundedinteger}
 \include{gentypeconv}
